--- a/puxbit/src/index.html
+++ b/puxbit/src/index.html
@@ -20,6 +20,9 @@
   <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/plugins/footable/css/footable.core.css" rel="stylesheet">
+<link href="assets/plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet" />
+  <link href="assets/css/pages/footable-page.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
   <link href="assets/css/colors/blue.css" id="theme" rel="stylesheet">
 
@@ -32,6 +35,7 @@
   <!-- Bootstrap tether Core JavaScript -->
   <script src="assets/plugins/bootstrap/js/popper.min.js"></script>
   <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/plugins/footable/js/footable.all.min.js"></script>
   <!-- slimscrollbar scrollbar JavaScript -->
   <script src="assets/js/perfect-scrollbar.jquery.min.js"></script>
   <!--Wave Effects -->
@@ -43,64 +47,11 @@
   <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
   <!--Custom JavaScript -->
   <script src="assets/js/custom.min.js"></script>
+  <script src="assets/js/footable-init.js"></script>
   <!-- This is data table -->
   <script src="assets/plugins/datatables/jquery.dataTables.min.js"></script>
   <!-- start - This is for export functionality only -->
-  <script src="https://cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
-  <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
-  <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
-  <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
-  <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js"></script>
-  <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
-  <!-- end - This is for export functionality only -->
-  <script>
-  $(document).ready(function() {
-      $('#myTable').DataTable();
-      $(document).ready(function() {
-          var table = $('#example').DataTable({
-              "columnDefs": [{
-                  "visible": false,
-                  "targets": 2
-              }],
-              "order": [
-                  [2, 'asc']
-              ],
-              "displayLength": 25,
-              "drawCallback": function(settings) {
-                  var api = this.api();
-                  var rows = api.rows({
-                      page: 'current'
-                  }).nodes();
-                  var last = null;
-                  api.column(2, {
-                      page: 'current'
-                  }).data().each(function(group, i) {
-                      if (last !== group) {
-                          $(rows).eq(i).before('<tr class="group"><td colspan="5">' + group + '</td></tr>');
-                          last = group;
-                      }
-                  });
-              }
-          });
-          // Order by the grouping
-          $('#example tbody').on('click', 'tr.group', function() {
-              var currentOrder = table.order()[0];
-              if (currentOrder[0] === 2 && currentOrder[1] === 'asc') {
-                  table.order([2, 'desc']).draw();
-              } else {
-                  table.order([2, 'asc']).draw();
-              }
-          });
-      });
-  });
-  $('#example23').DataTable({
-      dom: 'Bfrtip',
-      buttons: [
-          'copy', 'csv', 'excel', 'pdf', 'print'
-      ]
-  });
-  </script>
+
   <!-- ============================================================== -->
   <!-- Style switcher -->
   <!-- ============================================================== -->
